--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,10 +14,8 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     if: "contains(github.event.head_commit.message, 'versão')"
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.11.3
@@ -27,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r pygame
+        pip install pygame
     - name: Build and run Pygame
       run: |
         python Evolve.py
