--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "python.analysis.extraPaths": [
-        "./Models"
+        "./lib"
     ],
     "python.analysis.typeCheckingMode": "basic"
 }
